force-app/main/default/objects/Orbit_Run__c/Orbit_Run__c.object-meta.xml
<CustomObject>
    <label>ORBIT Run</label>
    <nameField>
        <displayFormat>ORB-{00000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ORBIT Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>